--- a/src/styles/iview-component.less
+++ b/src/styles/iview-component.less
@@ -31,8 +31,10 @@
 
 // Menu
 .ivu-menu-light.ivu-menu-horizontal .ivu-menu-item-active, .ivu-menu-light.ivu-menu-horizontal .ivu-menu-submenu-active, .ivu-menu-light.ivu-menu-horizontal .ivu-menu-item:hover, .ivu-menu-light.ivu-menu-horizontal .ivu-menu-submenu:hover {
-  color: #9e0a11;
-  border-bottom: 2px solid #9e0a11;
+  // color: #9e0a11;
+  // border-bottom: 2px solid #9e0a11;
+  color: #641E16;
+  border-bottom: 2px solid #641E16;
 }
 .ivu-menu-light.ivu-menu-vertical .ivu-menu-item-active:not(.ivu-menu-submenu) {
   background-color: rgba(0, 0, 0, .05);
