--- a/src/styles/iview-component.less
+++ b/src/styles/iview-component.less
@@ -33,3 +33,23 @@
   border-color: #BDC3C7;
   box-shadow: 0 0 0 0.5px rgba(154, 154, 154, 0.1);
 }
+
+// InputNumber
+.ivu-input-number:focus {
+  border-color: #9a9a9a;
+  box-shadow: 0 0 0 2px rgba(154, 154, 154, 0.2);
+}
+
+.ivu-input-number:hover {
+  border-color: #CACFD2;
+}
+
+.ivu-input-number-default:focus {
+  border-color: #BDC3C7;
+  box-shadow: 0 0 0 0.5px rgba(154, 154, 154, 0.1);
+}
+
+.ivu-input-number-focused {
+  border-color: #b4bbbf;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+}
