import mixin Page from sduoj-web

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -55,7 +55,7 @@
     top: -5px;
   }
 
-  .user-set-content-table {
+  .content-table {
     // ivu 表格头部
     .ivu-table-header {
       padding-right: 0;
@@ -86,7 +86,7 @@
     }
 
     // ivu 数据内容
-    .user-set-name {
+    .name {
       float: left;
     }
   }
